# softras

./: .gitignore  :w  ;  Cargo.toml  README.md  bundle_macos.sh  macos_bundle_info.plist.xml  package-lock.json
.cargo/: config.toml
macos_bundle_template/Contents/: Info.plist
macos_bundle_template/Contents/Resources/: ApplicationIcon.icns
muilib_backend/: Cargo.toml
muilib_backend/res/shaders/: instanced_rect.wgsl  text.wgsl
muilib_backend/src/: key_code.rs  main.rs
muilib_res/shaders/: image.wgsl
softras/: Cargo.toml
softras/src/: color.rs  key_code.rs  lib.rs  obj_file.rs  render.rs  respack.rs  shader.rs
softras/src/render/: color.rs  mod.rs  shader.rs
softras_core/: Cargo.toml
softras_core/src/: lib.rs  obj_file.rs  utils.rs
softras_core/src/render/: color.rs  mod.rs  shader.rs
softras_muilib/: Cargo.toml
softras_muilib/res/shaders/: rect.wgsl
softras_muilib/src/: key_code.rs  main.rs
softras_term/: Cargo.toml
softras_term/src/: main.rs  terminal.rs
softras_winit_wgpu/: Cargo.toml
softras_winit_wgpu/src/: key_code.rs  main.rs  shader.wgsl
