[package]
name = "muilib_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
derive_more = { version = "2.1.1", features = ["full"] }
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
muilib = { git = "https://github.com/leslie255/muilib.git", rev = "74538e0" }
softras = { path = "../softras/" }
