[package]
name = "softras_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.24.0"
derive_more = { version = "2.1.1", features = ["full"] }
glam = { version = "0.30.9", features = ["bytemuck", "fast-math"] }
image = "0.25.9"
log = { version = "0.4.29", features = ["kv"] }
obj-rs = "0.7.4"
typed-path = "0.12.0"
