[package]
name = "softras_term"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytemuck = "1.24.0"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
derive_more = { version = "2.1.1", features = ["full"] }
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.29", features = ["kv"] }
softras_core = { path = "../softras_core/" }
termios = "0.3.3"
